fixed size so theres no overflow

--- a/react-app/src/components/Songsheets/songsheets.css
+++ b/react-app/src/components/Songsheets/songsheets.css
@@ -39,13 +39,12 @@
     display: none;
 }
 .songsheet-textarea {
-    width: 500px;
-    height: 800px;
+    min-height: 500px;
     padding: 9px;
-    font-size: 18px;
     background-color: var(--background-color);
     color: var(--border-text-color);
     overflow: hidden;
+    border: 1px solid var(--ug-grey);
     overflow-y: scroll;
 }
 
